@startuml HomeLink
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor White
  BorderColor #1C1409
  ArrowColor #1C1409
}
hide circle
hide empty members
' ── Énumérations ──────────────────────────────
together {
  enum TypeLogement <<enumeration>> {
    CHAMBRE
    STUDIO
    APPARTEMENT
    VILLA
  }
  enum StatutAnnonce <<enumeration>> {
    EN_ATTENTE
    PUBLIEE
    SUSPENDUE
    LOUEE
  }
}
together {
  enum Role <<enumeration>> {
    PROPRIETAIRE
    LOCATAIRE
    ADMINISTRATEUR
  }
  enum StatutMessage <<enumeration>> {
    ENVOYE
    LU
    ARCHIVE
  }
}
' ── Utilisateur ───────────────────────────────
class Utilisateur {
  id : Long
  nom : String
  prenom : String
  email : String
  motDePasse : String
  telephone : String
  dateInscription : Date
  role : Role
  emailVerifie : Boolean
  emailToken : String
  resetToken : String
  resetTokenExpire : DateTime
  actif : Boolean
}
together {
  class Proprietaire {
    
  }
  class Locataire {
    
  }
  class Administrateur {
    
  }
}
Utilisateur <|-- Proprietaire
Utilisateur <|-- Locataire
Utilisateur <|-- Administrateur
' ── Domaine ───────────────────────────────────
class Quartier {
  id : Long
  nom : String
  commune : String
  description : String
}
class BienImmobilier {
  id : Long
  adresse : String
  ville : String
  surface : Double
  nombrePieces : Integer
  nombreSallesDeBain : Integer
  etage : Integer
  meuble : Boolean
  typeLogement : TypeLogement
}
class Annonce {
  id : Long
  titre : String
  description : String
  prix : Double
  datePublication : Date
  statut : StatutAnnonce
}
class Message {
  id : Long
  contenu : String
  dateEnvoi : Date
  lu : Boolean
}
class Photo {
  id : Long
  url : String
}
class Favori {
  id : Long
  dateAjout : Date
}
class Avis {
  id : Long
  note : Integer
  commentaire : String
  date : Date
}
' ── Associations ──────────────────────────────
Proprietaire     "1"    -down-  "0..*" BienImmobilier : possède
Quartier         "1"    -right- "0..*" BienImmobilier : situe dans
BienImmobilier   "1"    -down-  "0..*" Annonce        : fait l'objet de
' Les trois lignes depuis Annonce dans 3 directions
Annonce   "1"    -down-  "1..*" Photo     : contient
Annonce   "0..1" -right- "0..1" Locataire : louée à
Annonce   "0..*" -left-  "0..*" Message   : concerne
Locataire "1"    -down-  "0..*" Favori    : possède
Favori    "0..*" -right- "1"    Annonce   : porte sur
Utilisateur "0..*" -right- "0..*" Message : envoie / reçoit
Locataire  "1"    -down-  "0..*" Avis          : rédige
Avis       "0..*" -right- "1"    BienImmobilier : concerne
@enduml